--- a/vue-datav-report-dev/src/style/index.scss
+++ b/vue-datav-report-dev/src/style/index.scss
@@ -1,21 +1,42 @@
-.emphasis{
-    display: inline-block;
-    margin-left: 5px;
-    font-weight: 700;
+.emphasis {
+  display: inline-block;
+  margin-left: 5px;
+  font-weight: 700;
 }
-.increase{
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-color: transparent transparent red transparent;
-    border-width: 5px;
-    margin: 0 0 3px 5px;
+.increase {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-color: transparent transparent red transparent;
+  border-width: 5px;
+  margin: 0 0 3px 5px;
 }
-.decrease{
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-color: green transparent transparent transparent;
-    border-width: 5px;
-    margin: 3px 0 0 5px;
+.decrease {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-color: green transparent transparent transparent;
+  border-width: 5px;
+  margin: 3px 0 0 5px;
+}
+.el-card__header {
+  padding: 0 20px 0 60px;
+}
+
+.el-menu--horizontal > .el-menu-item {
+  height: 55px;
+}
+
+.box-card > .el-card__body {
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
+ul,
+li {
+  padding: 0;
+  margin: 0;
 }
